unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/breadwinner_ns__BW_Company__c.object-meta.xml
<CustomObject>
    <label>NetSuite Company</label>
    <nameField>
        <label>Company Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>