unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>breadwinner_ns__BillingAddr1__c&amp;&quot; &quot;&amp;
breadwinner_ns__BillingAddr2__c&amp;&quot; &quot;&amp;
IF(ISBLANK(breadwinner_ns__BillingCity__c),NULL,breadwinner_ns__BillingCity__c&amp;&quot;, &quot;)&amp;
breadwinner_ns__BillingState__c&amp;&quot; &quot;&amp;
breadwinner_ns__BillingZip__c&amp;&quot; &quot;&amp;
breadwinner_ns__BillingCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>