unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Category__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Category__c</fullName>
    <label>Category</label>
    <length>250</length>
    <type>Text</type>
</CustomField>