unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Created_Via__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Created_Via__c</fullName>
    <label>Created Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>