unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CreditLimit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>