unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Currency__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Currency</label>
    <referenceTo>breadwinner_ns__BW_Currency__c</referenceTo>
    <relationshipLabel>NetSuite Companies</relationshipLabel>
    <relationshipName>BWCompanies</relationshipName>
    <type>Lookup</type>
</CustomField>