unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__DateCreated__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DateCreated__c</fullName>
    <label>Date Created in NetSuite</label>
    <type>DateTime</type>
</CustomField>