unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Do_not_Import_Cash_Sales__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Do_not_Import_Cash_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Cash Sales</label>
    <type>Checkbox</type>
</CustomField>