unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Do_not_Import_Credit_Memos__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Do_not_Import_Credit_Memos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Credit Memos</label>
    <type>Checkbox</type>
</CustomField>