unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Do_not_Import_Vendor_Credits__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Do_not_Import_Vendor_Credits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Vendor Credits</label>
    <type>Checkbox</type>
</CustomField>