unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__EntityId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__EntityId__c</fullName>
    <label>Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>