unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Is1099Eligible__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Is1099Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1099 Eligible</label>
    <type>Checkbox</type>
</CustomField>