unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__IsPerson__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person</label>
    <type>Checkbox</type>
</CustomField>