unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__PrimaryContactInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PrimaryContactInternalId__c</fullName>
    <description>Stores the Internal Id of the Primary Contact related to a Company.</description>
    <label>Primary Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>