unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__ReminderDays__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ReminderDays__c</fullName>
    <label>Reminder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>