unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Salesforce_Account__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Salesforce_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated NetSuite Companies</relationshipLabel>
    <relationshipName>BWCompanies</relationshipName>
    <type>Lookup</type>
</CustomField>