unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Salutation__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Salutation__c</fullName>
    <label>Mr./Ms...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>