unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Subsidiary</label>
    <referenceTo>breadwinner_ns__BW_Subsidiary__c</referenceTo>
    <relationshipLabel>NetSuite Companies</relationshipLabel>
    <relationshipName>BWCompanies1</relationshipName>
    <type>Lookup</type>
</CustomField>