unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__Taxable__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>