unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/breadwinner_ns__VatRegNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__VatRegNumber__c</fullName>
    <label>Tax Reg. Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>