unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Has_Overdue_Balance_121_Days__c.field-meta.xml
<CustomField>
    <fullName>Has_Overdue_Balance_121_Days__c</fullName>
    <formula>Total_Amount_Overdue_121_plus_days__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Overdue Balance 121+ Days?</label>
    <type>Checkbox</type>
</CustomField>