unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Has_Overdue_Balance_61_Days__c.field-meta.xml
<CustomField>
    <fullName>Has_Overdue_Balance_61_Days__c</fullName>
    <formula>Total_Amount_Overdue_61_90_days__c &gt;0 ||
Total_Amount_Overdue_91_120_days__c &gt;0 ||
Total_Amount_Overdue_121_plus_days__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Overdue Balance 61+ Days?</label>
    <type>Checkbox</type>
</CustomField>