unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Has_Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Has_Overdue_Balance__c</fullName>
    <formula>Total_Amount_Overdue__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Overdue Balance?</label>
    <type>Checkbox</type>
</CustomField>