unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_2663_email_address_notif__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_2663_email_address_notif__c</fullName>
    <label>Email Address for Payment Notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>