unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_atlas_churn_date__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_atlas_churn_date__c</fullName>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>