unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_atlas_collections_rep__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_atlas_collections_rep__c</fullName>
    <label>Collections Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>