unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_atlas_customer_invoice_email__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_atlas_customer_invoice_email__c</fullName>
    <label>Customer Invoice Email</label>
    <type>Email</type>
</CustomField>