unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_atlas_customer_probability__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_atlas_customer_probability__c</fullName>
    <label>Customer Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>