unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_atlas_email_indiv_invoices__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_atlas_email_indiv_invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Individual Invoices</label>
    <type>Checkbox</type>
</CustomField>