unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/ncf_entity_customrecord_sfdc_id__c.field-meta.xml
<CustomField>
    <fullName>ncf_entity_customrecord_sfdc_id__c</fullName>
    <label>Salesforce ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>