unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Total_Amount_Overdue_1_30_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Overdue_1_30_days__c</fullName>
    <label>Total Amount Overdue (1-30 days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>