unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Total_Amount_Overdue_91_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Overdue_91_days__c</fullName>
    <formula>Total_Amount_Overdue_91_120_days__c +
Total_Amount_Overdue_121_plus_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Overdue (91+ days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>