unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/Total_Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Overdue__c</fullName>
    <formula>Total_Amount_Overdue_1_30_days__c+
Total_Amount_Overdue_31_60_days__c+
Total_Amount_Overdue_61_90_days__c+
Total_Amount_Overdue_91_120_days__c+
Total_Amount_Overdue_121_plus_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>