unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/fields/View_in_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>View_in_Netsuite__c</fullName>
    <formula>HYPERLINK(
  &quot;https://&quot;&amp;breadwinner_ns__NetSuite_Org_Id__c&amp;&quot;.app.netsuite.com/app/common/entity/entity.nl?id=&quot;&amp;breadwinner_ns__InternalId__c, 
&quot;Link&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Netsuite</label>
    <type>Text</type>
</CustomField>