unpackaged/main/default/objects/breadwinner_ns__BW_Company__c/listViews/breadwinner_ns__NetSuite_Vendors.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Vendors</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__IsPerson__c</columns>
    <columns>breadwinner_ns__CompanyName__c</columns>
    <columns>breadwinner_ns__FirstName__c</columns>
    <columns>breadwinner_ns__LastName__c</columns>
    <columns>breadwinner_ns__Salesforce_Account__c</columns>
    <columns>breadwinner_ns__Subsidiary__c</columns>
    <columns>breadwinner_ns__Currency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__Entity_Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <label>NetSuite Vendors</label>
</ListView>